--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/blakelapierre/mp4box.js.git"
+    "url": "https://github.com/blakelapierre/mp4box.js.git"
   },
   "author": "",
   "license": "LGPL3",
